RC 4
====

- Fixed bug in AllComponentsReleasePolicy in which burden not properly handled
  on dispose.

- Applied patch from Joao Braganca to allow abstract types in DefaultComponentActivator if proxied.

- Added additional AddFacility overrides to improve fluent configuration of facilities.

- Moved DefaultComponentActivator check for abstract so it can be better overriden.
  
- Added Attribute to Component Registration fluent interface.

- Add ability to use Configure components based on implementation type when
  using AllTypesOf.

- Do not return forward handlers in ResolveAll since you will get duplicate services.

- Applied patch (with mods) from Martin Nllsson to select registration interface from
  containing interface.

- Added shortcut to AllTypes to accept a where.

- Added ability to include non-public types in registration.

- Updated registration to support providing multiple service types.

- Add registration support for mixins.

- Do not allow registering components with the same name in fluent interface.

- Applied Ayendes patch to introduce component service type forwarding to
  support multiple service interfaces for a component.
  Extended the Component Registration interface to support service forwarding.

- Avoid to register abstract component via IKernel.AddComponent, now throws when trying to add instead of while resolving component

- Removed sealed qualifier from CreationContext and made ISubDependencyResolver
  methods virtual so they can be overriden.

- Made IKernel.AddFacility fluent.

- Added StartMethod/StartMethod to ComponentRegistration.

- Add if/unless support for ComponentRegistration.

- Applied Daniel Jins patch to not proxy internal interfaces.

- Fixed IOC-126
  "PoolableLifestyleManager creates pool in constructor" 

- Fixed IOC-125
  "DefaultGenericHandler does not properly handle proxied generic components"

- Updated AllTypes strategy to support types based on generic type definitions.
