@@ -17,7 +17,7 @@ namespace Castle.MicroKernel.Tests.ClassComponents
 	/// <summary>
 	/// 
 	/// </summary>
-    public interface ICommonSub2 : ICommon
+    public interface ICommonSub2 : ICommonSub1
     {
     }
 }
